# assignment-aikudata

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
assaiku/: _version.py  cli.py  dummy.py
assaiku/data/: __init__.py  config.py  pipeline.py  validation.py
assaiku/data/constants/: __init__.py  categories.py  columns.py
assaiku/data/exploration/: __init__.py  categorical.py  continuous.py  utils.py
assaiku/data/processing/: __init__.py  duplicates.py  filter.py  outliers.py
assaiku/data/utils/: load.py
assaiku/data/validation/: __init__.py  model.py  validation.py
assaiku/model/: __init__.py  pipeline.py
assaiku/model/configs/: __init__.py  base.py  evaluation.py  lg.py  svm.py  xgboost.py
assaiku/model/evaluation/: __init__.py  analyze.py  eval.py
assaiku/model/processors/: __init__.py  binarizer.py  fit.py  initialize.py  split.py
assaiku/model/train/: __init__.py  initialize.py  train.py
assaiku/utils/: __init__.py  main.py
makefiles/: docs.Makefile  hub.Makefile  python.Makefile
notebooks/: data_exploration.ipynb  data_modeling.ipynb  ml_pipeline.ipynb  model_train_eval.ipynb
requirements/: dev.txt  docs.txt  main.txt
tests/: test_dummy.py
